# japanese-speculative-decoding

./: .gitignore  README.md  README_EN.md  RESULTS.md  main.py  pyproject.toml
src/: dataloader.py  decoder.py
