[tool.poetry]
name = "japanese-speculative-decoding"
version = "0.1.0"
description = "Verification of the effect of speculative decoding in Japanese."
authors = ["u-hyszk <hayashizaki.yu.t5@dc.tohoku.ac.jp>"]
license = "CC BY-SA 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.3"
tqdm = "^4.66.1"
torch = { url = "https://download.pytorch.org/whl/cu117/torch-2.0.0%2Bcu117-cp39-cp39-linux_x86_64.whl"}
transformers = {git = "https://github.com/huggingface/transformers.git"}
datasets = "^2.14.6"
optimum = "^1.16.1"
sentencepiece = "^0.1.99"
protobuf = "3.20.3"
sumeval = "^0.2.2"
janome = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
